--- a/lib/pelable_web/templates/task/form.html.eex
+++ b/lib/pelable_web/templates/task/form.html.eex
@@ -6,7 +6,7 @@
   <% end %>
 
   <%= label f, :name, style: "display: inline-block;" %>
-  <%= text_input f, :name, style: "display: inline-block; margin-left: 12px; width: 250px;", class: "form-control" %>
+  <%= text_input f, :name, id: "task_name_input" , style: "display: inline-block; margin-left: 12px; width: 250px;", class: "form-control" %>
   <%= error_tag f, :name %>
 
 <%= submit "Save", class: "btn btn-primary", style: "margin-left: 3px;" %>
