--- a/lib/pelable_web/templates/habit/form.html.eex
+++ b/lib/pelable_web/templates/habit/form.html.eex
@@ -6,7 +6,7 @@
   <% end %>
 
   <%= label f, :name, style: "display: inline-block;" %>
-  <%= text_input f, :name, class: "form-control", style: "display: inline-block; margin-left: 10px; width: 250px;" %>
+  <%= text_input f, :name, id: "habit_name_input", class: "form-control", style: "display: inline-block; margin-left: 10px; width: 250px;" %>
   <%= error_tag f, :name %>
 
   <%= label f, :frequency, style: "margin-left: 9px;" %>
