--- a/lib/pelable_web/templates/habit/form.html.eex
+++ b/lib/pelable_web/templates/habit/form.html.eex
@@ -10,7 +10,7 @@
   <%= error_tag f, :name %>
 
   <%= label f, :frequency, style: "margin-left: 9px;" %>
-  <%= select f, :time_frequency, [{:daily, "daily"}], class: "custom-select", style: "margin-left: 7px; width: 110px;" %>
+  <%= select f, :time_frequency, [{:daily, "daily"}, {:weekly, "weekly"}], class: "custom-select", style: "margin-left: 7px; width: 110px;" %>
   <%= error_tag f, :time_frequency %>
 
     <%= submit "Save", class: "btn btn-primary", style: "margin-left: 3px;" %>
