fix alt for pelable log

--- a/lib/pelable_web/templates/layout/app.html.eex
+++ b/lib/pelable_web/templates/layout/app.html.eex
@@ -156,7 +156,7 @@ function myFunction() {
 </div>
         </nav>
         <a href="https://pelable.com/" class="">
-          <img src="<%= Routes.static_path(@conn, "/images/side.png") %>" alt="Pelable Community Logo"/>
+          <img src="<%= Routes.static_path(@conn, "/images/side.png") %>" alt="Pelable Logo"/>
         </a>
       </section>
     </header>
