--- a/lib/pelable_web/templates/habit/index.html.eex
+++ b/lib/pelable_web/templates/habit/index.html.eex
@@ -124,6 +124,17 @@
 
 <div id="app_basic" class="container">
 
+<div>
+  <!-- Using modifiers -->
+  <b-button v-b-modal.my-modal>Show Modal</b-button>
+
+  <!-- Using value -->
+  <b-button v-b-modal="'my-modal'">Show Modal</b-button>
+
+  <!-- The modal -->
+  <b-modal id="my-modal">Hello From My Modal!</b-modal>
+</div>
+
 <div class="row">
 <%= for {habit, streak} <- @habits do %>
 
